# rzfile

./: Cargo.toml  README.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  file.rs  lib.rs  name.rs
